CPL/Tema3/tema3-tests/let.lcpl.err
Exception in thread "main" java.lang.NullPointerException
	at ro.pub.cs.lcpl.IfStatement.emitIR(IfStatement.java:68)
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:28)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:28)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:28)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:28)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.Program.emitIR(Program.java:337)
	at LCPLCodeGen.main(LCPLCodeGen.java:23)
llc: let.lcpl.ir:103:1: error: expected instruction opcode
L1:
^
clang: error: no such file or directory: 'let.lcpl.ir.s'
./eval.sh: line 27: ./let: No such file or directory
rm: cannot remove `let': No such file or directory
